--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
-                        <a href="#home" class="nav-item nav-link active">not Home</a>
+                        <a href="#home" class="nav-item nav-link active">Home</a>
                         <a href="#about" class="nav-item nav-link">About</a>
                         <a href="#service" class="nav-item nav-link">Education</a>
                         <a href="#experience" class="nav-item nav-link">Experience</a>
@@ -60,9 +60,9 @@
                         <div class="hero-content">
                             <div class="hero-text">
                                 <p>I'm</p>
-                                <h1>Ayush Tankha</h1>
+                                <h1>Arabi TEFFAHI</h1>
                                 <h2></h2>
-                                <div class="typed-text">Data Analyst, Business Analyst, Data Scientist</div>
+                                <div class="typed-text">Data Scientist, Data analyst, Azure Certified</div>
                             </div>
                             <div class="hero-btn">
                                 <a class="btn" href="#isfooter">Contact Me</a>
@@ -97,7 +97,7 @@
                             </div>
                             <div class="about-text">
                                 <p>
-                                    As a professional specializing in extracting insights from data, I excel in identifying trends, creating reports, and supporting decision-making processes. My expertise lies in interpreting complex datasets, designing efficient data models, and providing actionable recommendations to enhance business performance. With a strong foundation in statistical analysis and a keen eye for detail, I help organizations understand their data and drive strategic initiatives.
+                                    Passionné par l'innovation dans le domaine des données, je combine une expertise approfondie en conception, apprentissage et déploiement de modèles prédictifs scalables avec une spécialisation en modélisation et prévision de séries temporelles. Mon approche rigoureuse en Data Science garantit des solutions robustes, maintenables et prêtes pour l'industrialisation, toujours alignées sur les meilleures pratiques du Clean Code.
                                 </p>
                             </div>
                             <div class="skills">
@@ -108,7 +108,7 @@
                                     <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                                 <div class="skill-name">
-                                    <p>Power BI</p><p>95%</p>
+                                    <p>R</p><p>95%</p>
                                 </div>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
@@ -120,13 +120,13 @@
                                     <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                                 <div class="skill-name">
-                                    <p>Consulting</p><p>85%</p>
+                                    <p>SAS</p><p>80%</p>
                                 </div>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
-                            <a class="btn" href="https://medium.com/@ayushtankha">Learn More</a>
+                            <a class="btn" href="https://arabi.quarto.pub/arabi-portoflio">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -150,8 +150,8 @@
                                 <!-- i class="fa fa-laptop"></i-->
                             </div>
                             <div class="service-text">
-                                <h3>ESSEC Business School & CentraleSupelec (2022 - 2024)</h3>
-                                <h6>Ms Data Science & Business Analytics </h6>
+                                <h3>DSTI School Of Engineering (2022 - 2024)</h3>
+                                <h6>Expert science des données & IA</h6>
                                 <h6>(Paris, France) </h6>
                                 <p>
                                     
@@ -182,9 +182,9 @@
                                 <!--i class="fab fa-android"></i-->
                             </div>
                             <div class="service-text">
-                                <h3>Delhi Technological University (2017 - 2021)</h3>
-                                <h6>B.Tech in Mechanical Engineering </h6>
-                                <h6>(Delhi, India) </h6>
+                                <h3>Ecole Nationale De Statistique  (2017 - 2021)</h3>
+                                <h6>Ingénieur en Statistique Appliquée</h6>
+                                <h6>(Alger, Algérie) </h6>
                             </div>
                         </div>
                     </div>
@@ -727,28 +727,28 @@
                 <div class="container">
                     <div class="footer-info">
                         <h2>Send me a Message !</h2>
-                        <h3>Ayush Tankha</h3>
+                        <h3>Arabi TEFFAHI</h3>
                         <div class="footer-menu">
-                            <p>+33 745738956</p>
-                            <p>ayushtankha@gmail.com</p>
+                            <p>+33 7 58 00 61 80</p>
+                            <p>med.arabi.teff@gmail.com</p>
                         </div>
-                        <h3>158 Amerikalei, Antwerp 2000, Belgium</h3>
+                        <h3>18 rue des partants, paris, 75020</h3>
 
                         <div class="footer-social">
                             <!--a href=""><i class="fab fa-twitter"></i></a>
                             <a href=""><i class="fab fa-facebook-f"></i></a>
                             <a href=""><i class="fab fa-youtube"></i></a>
                             <a href=""><i class="fab fa-instagram"></i></a -->
-                            <a href="https://github.com/ayushtankha" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/Arabiteff" target="_blank"><i class="fab fa-github"></i></a>
 
-                            <a href="https://medium.com/@ayushtankha" target="_blank"><i class="fab fa-medium"></i></a>
+                            <a href="https://arabi.quarto.pub/arabi-portoflio/" target="_blank"><i class="fab fa-medium"></i></a>
 
-                            <a href="https://www.linkedin.com/in/ayush-tankha/" target="_blank"><i class="fab fa-linkedin-in" ></i></a>
+                            <a href="https://www.linkedin.com/in/arabi-teffahi/" target="_blank"><i class="fab fa-linkedin-in" ></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="container copyright">
-                    <p>&copy; <a href="#">Ayush Tankha</a>, All Right Reserved | Designed By <a href="https://htmlcodex.com">HTML Codex</a></p>
+                    <p>&copy; <a href="#">Arabi TEFFAHI</a>, All Right Reserved | Designed By <a href="https://htmlcodex.com">HTML Codex</a></p>
                 </div>
             </div>
         </div>
