--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </div>
                     <div class="col-sm-12 col-md-6 d-none d-md-block">
                         <div class="hero-image">
-                            <img src="img/dp.png" alt="">
+                            <img src="img/first.png" alt="">
                         </div>
                     </div>
                 </div>
