--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                 <p>I'm</p>
                                 <h1>Arabi TEFFAHI</h1>
                                 <h2></h2>
-                                <div class="typed-text">Data Scientist, Data analyst, Azure Certified</div>
+                                <div class="typed-text">Data Scientist, Microsoft Data engineer, Azure Certified</div>
                             </div>
                             <div class="hero-btn">
                                 <a class="btn" href="#isfooter">Contact Me</a>
@@ -110,19 +110,19 @@
                                     <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                                 <div class="skill-name">
-                                    <p>R</p><p>95%</p>
+                                    <p>R</p><p>90%</p>
                                 </div>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                                 <div class="skill-name">
-                                    <p>Python</p><p>90%</p>
+                                    <p>Python</p><p>95%</p>
                                 </div>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                                 <div class="skill-name">
-                                    <p>SAS</p><p>80%</p>
+                                    <p>Cloud</p><p>80%</p>
                                 </div>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
@@ -243,8 +243,9 @@
                             <h4>Data scientiste/engineer&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>(Algeirs, Algeria)</strong></h4>
                             <p>
                                 •	Pipeline <b>ETL</b> de la BDD <b>Odoo</b> vers un azure data lake avec <b>Azure Data Factory</b>.</p>
-                            <p>  •	<b>DataCleaning/DataPrepation</b> des données chargées puis utilisation des <b>visualisations</b>.</p>
-                            <p>  •	<b>Identification/recommandation </b>des stratégies d'amélioration les <b>KPI</b>.</p>
+                            <p>  •	Utilisation du <b>Copy Activity</b> du system d’information vers un <b>Azure Blob Storage</b> en fichier JSON.</p>
+                            <p>  •	<b>Alimentation / développement</b> d’un dashboard <b>power BI </b> avec les données Artifacts.</p>
+                            <p>  •	Utilisation de <b>Azure DevOps</b> pour la gestion des <b>environnements </b> et des <b>branchs</b>.</p>
 
                         </div>
                     </div>
@@ -254,8 +255,9 @@
                             <h2>Yassir VTC</h2>
                             <h4>STAGE Data Scientiste&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>(Algeirs, Algeria)</strong></h4>
                             <p>
-                                •	La <b>conception</b>, <b>développement</b> d'un <b>Deep Learning</b> Framework pour prédire l'écart entre l'offre et la demande. </p>
-                            <p> •  Effectuer des extractions et des manipulations d’une <b>BDD massive</b> de YASSIR (google cloud platform)</p>
+                                •	La <b>conception</b>, <b>développement</b> d'un <b>Deep Learning</b> Framework pour prédire l'écart entre l'offre et la demande.</p>
+                            <p> •  Mettre en place plusieurs <b>modèles en compétition</b> et évaluation avec <b>RMSE</b> et <b>MAE</b>.</p>
+                            <p> •  Utilisation de <b>MLflow</b> pour le suivi des versions des modèles et de leur <b>architecture</b>, ainsi que pour le <b>tracking</b> des métriques RMSE et MAE</p>
                             <p> •  <b>EDA</b> pour répondre aux questions dépendantes aux anomalies.
                             </p>
                         </div>
@@ -306,9 +308,9 @@
                     <div class="col-12">
                         <ul id="portfolio-filter">
                             <li data-filter="*" class="filter-active">All</li>
-                            <li data-filter=".filter-1">Internship</li>
-                            <li data-filter=".filter-2">Business Intelligence</li>
-                            <li data-filter=".filter-3">Data Science</li>
+                            <li data-filter=".filter-1">Data science / Machine learning</li>
+                            <li data-filter=".filter-2">Time series</li>
+                            <li data-filter=".filter-3">Data engineer</li>
                         </ul>
                     </div>
                 </div>
