project section add

--- a/index.html
+++ b/index.html
@@ -318,43 +318,43 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.0s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
-                                <img src="img/accor.png" alt="Image">
+                                <img src="img/advanced_sql.jpg" alt="Image">
                             </div>
                             <div class="portfolio-text">
-                                <h3>Travel Itinerary Planner (Gen AI) ACCOR</h3>
+                                <h3>Some complex SQL queries</h3>
                                 <a class="btn" href="https://medium.com/@ayushtankha/gen-ai-travel-itinerary-planner-accor-31f437bef8e0"  target="_blank">+</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.2s">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
-                                <img src="img/tableau.png" alt="Image">
+                                <img src="img/good_reads_img.png" alt="Image">
                             </div>
                             <div class="portfolio-text">
-                                <h3>My Tableau Public Profile</h3>
+                                <h3>Modèle de prédiction de notation de livres</h3>
                                 <a class="btn" href="https://public.tableau.com/app/profile/ayush.tankha/vizzes" target="_blank">+</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-3 wow fadeInUp" data-wow-delay="0.4s">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
-                                <img src="img/PCA.png" alt="Image">
+                                <img src="img/fire-detection.png alt="Image">
                             </div>
                             <div class="portfolio-text">
-                                <h3>Customer Market Segmentation</h3>
+                                <h3>Aerial fire detection with drones</h3>
                                 <a class="btn" href="https://github.com/ayushtankha/cutomer-market-segmentation-of-credit-card-users/tree/main" target="_blank">+</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.6s">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
-                                <img src="img/rain.png" alt="Image">
+                                <img src="img/time_series.png" alt="Image">
                             </div>
                             <div class="portfolio-text">
-                                <h3>Rainfall Prediction Model (Time Series)</h3>
+                                <h3>Getting started with time series forecasting</h3>
                                 <a class="btn" href="https://medium.com/@ayushtankha/data-science-internship-telecom-sud-paris-4-months-65dd6ef943d8" target="_blank">+</a>
                             </div>
                         </div>
@@ -362,10 +362,10 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.8s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
-                                <img src="img/patient21.png" alt="Image">
+                                <img src="img/multi_time_series_forecasting.png" alt="Image">
                             </div>
                             <div class="portfolio-text">
-                                <h3>Revenue & Patient Forecast (Patient21)</h3>
+                                <h3>Multiple time series forecasting</h3>
                                 <a class="btn" href="https://github.com/ayushtankha/Patient21_Analytics" target="_blank">+</a>
                             </div>
                         </div>
@@ -373,10 +373,10 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-3 wow fadeInUp" data-wow-delay="1s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
-                                <img src="img/HR.png" alt="Image">
+                                <img src="img/adf.png" alt="Image">
                             </div>
                             <div class="portfolio-text">
-                                <h3>Employee Attrition Predictor</h3>
+                                <h3>Getting started with microsoft azure data factory</h3>
                                 <a class="btn" href="https://github.com/ayushtankha/Employee-Attrition-Predictor/tree/main" target="_blank">+</a>
                             </div>
                         </div>
