--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
-                                <img src="img/fire-detection.png alt="Image">
+                                <img src="img/fire-detection.png" alt="Image">
                             </div>
                             <div class="portfolio-text">
                                 <h3>Aerial fire detection with drones</h3>
