--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                             </div>
                             <div class="portfolio-text">
                                 <h3>Multiple time series forecasting</h3>
-                                <a class="btn" href="" target="_blank">+</a>
+                                <a class="btn" href="https://github.com/Arabiteff/Time-Series-Forecasting-Template" target="_blank">+</a>
                             </div>
                         </div>
                     </div>
