description and title changed

--- a/index.html
+++ b/index.html
@@ -94,16 +94,16 @@
                     <div class="col-lg-6">
                         <div class="about-content">
                             <div class="section-header text-left">
-                                <p>À propos de moi</p>
-                                <h2>Déscription</h2>
+                                <p>Maîtrise l'ensemble du parcours des données</p>
+                                <h2>À propos de moi</h2>
                             </div>
                             <div class="about-text">
                                 <p>
-                                    Data Scientist, Microsoft Data Engineer passionné, expert dans tout le cycle de vie des données, de l'ingénierie jusqu'au déploiement de modèles de machine learning avancés, avec une spécialisation en séries temporelles. Plus de 3 ans d’expérience, je maîtrise l’écosystème des données, y compris les environnements Cloud comme Microsoft Azure et Google Cloud Platform.
+                                    Data Scientist, Microsoft Data Engineer passionné, expert dans tout le cycle de vie des données, de l'ingénierie jusqu'au déploiement de modèles de machine learning avancés, avec une spécialisation en séries temporelles. Plus de 3 ans d’expérience, je maîtrise l’écosystème des données, y compris les environnements Cloud comme Microsoft Azure et Google Cloud Platform</p>
 
-                                    Fortement engagé dans l’opérationnel, alliant rigueur technique et créativité analytique pour concevoir des modèles prédictifs adaptés aux problématiques mathématiquement complexes
+                                <p>   Fortement engagé dans l’opérationnel, alliant rigueur technique et créativité analytique pour concevoir des modèles prédictifs adaptés aux problématiques mathématiquement complexes </p>
 
-                                </p>
+                                
                             </div>
                             <div class="skills">
                                 <div class="skill-name">
