modifie website content eg

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                 <p>Je suis</p>
                                 <h1>Arabi TEFFAHI</h1>
                                 <h2></h2>
-                                <div class="typed-text">Data Scientist, Microsoft Data engineer, Azure Certified</div>
+                                <div class="typed-text">Data engineer, Data Scientist, Azure Certified</div>
                             </div>
                             <div class="hero-btn">
                                 <a class="btn" href="#isfooter">Contactez-moi</a>
@@ -99,9 +99,13 @@
                             </div>
                             <div class="about-text">
                                 <p>
-                                    Data Scientist, Microsoft Data Engineer passionné, expert dans tout le cycle de vie des données, de l'ingénierie jusqu'au déploiement de modèles de machine learning avancés, avec une spécialisation en séries temporelles. Plus de 3 ans d’expérience, je maîtrise l’écosystème des données, y compris les environnements Cloud comme Microsoft Azure et Google Cloud Platform</p>
+                                    Data Engineer certifié Microsoft avec très bonne maitrise dans tout le parcours des données, de l'ingénierie jusqu'à la Mise En
+                                    Production des modèles Machine Learning avec une spécialisation en Séries Temporelles.</p>
 
-                                <p>   Fortement engagé dans l’opérationnel, alliant rigueur technique et créativité analytique pour concevoir des modèles prédictifs adaptés aux problématiques mathématiquement complexes </p>
+                                <p> Fort de +3 ans d’expérience, je suis à l’aise dans l’utilisation des platforms Cloud telles que Microsoft Azure et Google Cloud
+                                    Platform  </p>
+                                <p> Fortement engagé dans l’opérationnel (DevOps), alliant rigueur technique pour concevoir des Pipelines de Données adaptés aux
+                                    besoin métier </p>
 
                                 
                             </div>
@@ -114,6 +118,12 @@
                                 </div>
                                 <div class="skill-name">
                                     <p>Python</p><p>95%</p>
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                                <div class="skill-name">
+                                    <p>PySpark</p><p>85%</p>
                                 </div>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
@@ -253,12 +263,12 @@
                             <h2>Carrefour Supply Chain</h2> 
                             <h4>Data Scientist &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>(evry, France)</strong></h4>
                             <p>
-                                •	Migration Solution de prévision de <b>SAS Viya</b> vers  <b>Google Cloud</b></p>
-                            <p>    •	<b>POC</b> pour la Prévision des Préparations des Colis</p>
-                            <p>    • Mise en compétition de <b>14 modèles</b> pour la prévision</p>
-                            <p>    • <b>Automatisation</b> des Processus Quotidiens</p>
-                            <p>    • Outil de <b>Recommandation</b></p>
-                            <p>    • <b>Approche causal</b> pour la gestion des promotions</p>
+                                •	Conduit la migration d'une solution de prévision de SAS Cloud vers Google Cloud Platform (GCP)</p>
+                            <p>    •	Data Warehousing des données sur BigQuery avec SQL pour alimenter la solution de prévision (Forecasting et Reporting)  </p>
+                            <p>    • Requêtes SQL pour transformer, nettoyer et gérer des tables alimentant un modèle en étoile, incluant plus de 200k séries temporelles</p>
+                            <p>    • Pipelines Python avec le SDK Google, automatisés via Rundeck pour exécuter des requêtes SQL hebdomadaires sur une VM GCP</p>
+                            <p>    • Définition des User Stories et des objectifs de Sprint bihebdomadaires dans un environnement Scrum (Jira)</p>
+                            <p>    • POC avec Prophet pour améliorer la planification en entrepôt (+6,39 Points de fiabilité) </p>
                         </div>
                     </div>
                     <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
@@ -268,9 +278,11 @@
                             <h4>Data engineer&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>(Algeirs, Algeria)</strong></h4>
                             <p>
                                 •	Pipeline <b>ETL</b> de la BDD <b>Odoo</b> vers un azure data lake avec <b>Azure Data Factory</b></p>
-                            <p>  •	Utilisation du <b>Copy Activity</b> du system d’information vers un <b>Azure Blob Storage</b> en fichier JSON</p>
-                            <p>  •	<b>Alimentation / développement</b> d’un dashboard <b>power BI </b> avec les données Artifacts</p>
-                            <p>  •	Utilisation de <b>Azure DevOps</b> pour la gestion des <b>environnements </b> et des <b>branchs</b></p>
+                            <p>  •	Utilisation du <b>Copy Activity</b> du system d’information vers un <b>Azure Blob Storage</b> en fichier JSON (Chargement de façon incrémentielle) </p>
+                            <p>  •	Azure Data Factory pipeline branching pour gérer le cas d’utilisation multiple </p>
+                            <p>  •	Développement d’un data flow pour le nettoyage des donnés respectant le data modèle (Artifacts)</p>
+                            <p>  •	Alimentation / développement d’un Dashboard power BI avec les données Artifacts</p>
+                            <p>  •	Gestion d’environnement avec l’implémentation du CI/CD avec Azure DevOps pour le ADF (ADF dev, ADF test, ADF prod)</p>
 
                         </div>
                     </div>
