--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                         <div class="timeline-text">
                             <div class="timeline-date">OCT 2022 - OCT 2024 (2 ans) </div>
                             <h2>Carrefour Supply Chain</h2> 
-                            <h4>Data Scientist &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>(evry, France)</strong></h4>
+                            <h4>Data engineer &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>(evry, France)</strong></h4>
                             <p>
                                 •	Conduit la migration d'une solution de prévision de SAS Cloud vers Google Cloud Platform (GCP)</p>
                             <p>    •	Data Warehousing des données sur BigQuery avec SQL pour alimenter la solution de prévision (Forecasting et Reporting)  </p>
