website tracking add

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <script defer data-domain="arabiteff.github.io" src="https://plausible.io/js/script.file-downloads.hash.outbound-links.pageview-props.revenue.tagged-events.js"></script>
+        <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
+
         <meta charset="utf-8">
         <title>Welcome - Arabi TEFFAHI Portfolio</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
